# s4_Lab1_AlgPol

./: .gitignore  CMakeLists.txt  README.md
HashTblCh_test/: HashTblCh_test.vcxproj  test.cpp
Interface/: CMakeLists.txt  Interf.cpp  Interf.h
ListTable_test/: ListTable_test.vcxproj
calculator/: CMakeLists.txt  calculator.h  calculator_test.cpp  stack.h
polinom/: CMakeLists.txt  Calcultor.h  THeadList.h  TList.h  TMonom.h  TNode.h  TPolinom.h  TPolinom_Test.cpp  polinom_test.cpp
table/: CMakeLists.txt  HashTblCh.h  HashTblDH.h  ListTable.cpp  ListTable.h  Table.h  Tree.h  orderedArrayTable.h  table_test.cpp  unorderedArrayTable.h
testfiles/: CMakeLists.txt  all_test.cpp  test.cpp  tree_test.cpp
tree_test/: test.cpp  tree_test.vcxproj
